# learn.dev

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py  middlewares.py  seed_database.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 50f0193a93f0_init.py
backend/app/api/crud/: challenges.py  users.py
backend/app/api/models/: __init__.py  challenges.py  model_config.py  users.py
backend/app/api/routes/: __init__.py  auth.py  challenges.py  users.py
backend/app/api/schemas/: __init__.py  challenges.py  users.py
backend/app/core/: config.py  database.py
backend/app/core/security/: password.py  token.py
backend/app/utils/: google.py  helper.py
backend/tests/: test_rate_limiting.py
frontend/: auth.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(workspace)/: layout.tsx
frontend/components/: AvatarDropdown.tsx  BreadcrumPath.tsx  DifficultyTag.tsx  Footer.tsx  Header.tsx  MaxWidthWrapper.tsx  MultipleSelectCombobox.tsx  RenderMarkdown.tsx
frontend/components/Challenge/: ChallengeStatusButton.tsx  ChallengeSubmissionDialog.tsx  ContributeChallengeButton.tsx  Leaderboard.tsx  Submission.tsx  TakeChallengeButton.tsx
frontend/components/Forms/: ChallengeSubmissionForm.tsx  (+4 more)
frontend/data-access/: challenge.ts  user.ts
frontend/lib/: axios.ts  definitions.ts
frontend/public/: robots.txt
frontend/types/: challenges.ts  next-auth.d.ts
(+17 files in other folders)
